Fixing / reverting tom select to support inline overflow cropping

--- a/src/sass/50_objects/_objects.form-elements.scss
+++ b/src/sass/50_objects/_objects.form-elements.scss
@@ -436,7 +436,6 @@ $form-footer-primary-contrast: var(--oo-color-footer-contrast-primary);
     > .ts-control-inner {
       position: relative;
       display: inline-block;
-      height: 100%;
       width: 100%;
       background: unset;
       white-space: nowrap;
@@ -468,11 +467,11 @@ $form-footer-primary-contrast: var(--oo-color-footer-contrast-primary);
   }
 
   .ts-items {
-    display: inline-flex;
-    flex-wrap: nowrap;
-    gap: 1rem;
+    display: inline-block;
     max-width: calc(100% - 3.5rem);
     height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
     vertical-align: middle;
     font-size: 1rem;
@@ -480,8 +479,11 @@ $form-footer-primary-contrast: var(--oo-color-footer-contrast-primary);
   }
 
   .ts-item {
-    width: 100%;
+    display: inline;
+    max-width: 100%;
     height: 100%;
+    padding: unset !important;
+    margin: 0 1rem 0 0;
     background: none;
     border: 0;
     cursor: default;
@@ -592,9 +594,7 @@ $form-footer-primary-contrast: var(--oo-color-footer-contrast-primary);
       padding: $form-padding;
 
       input {
-        width: 1px;
-        height: 1px;
-        opacity: 0;
+        min-width: 3.5rem;
 
         &::placeholder {
           color: transparent;
